@@ -4,6 +4,8 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 0.6.8
 ========================
  -- Invalid AllowGroup value in slurm.conf to not cause seg fault.
+ -- Fix bug that would cause slurmctld to seg-fault with select/cons_res
+    and batch job comtaining more than one step.
 
 * Changes in SLURM 0.6.7
 ========================
